Changed Java version and made some tests.